--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -4,9 +4,9 @@
 
 {% if branch_level == 0 %}
 <a href="#menu" class="menu-trigger"><i class="fa fa-bars"></i> Меню</a>
-<div class="hide-top-search">
+<!--<div class="hide-top-search">
 {% search_form "all" %}
-</div>
+</div>-->
 <nav id="navigation">
 <ul class="menu" id="responsive">
     {% for page in page_branch %}
@@ -34,7 +34,7 @@
     </li>
     {% endif %}
     {% endfor %}
-    <li style="float: right; margin: 5px 0px;">{% search_form "all" %}</li>
+    <!--<li style="float: right; margin: 5px 0px;">{% search_form "all" %}</li>-->
 </ul>
 </nav>
 
