--- a/theme/templates/accounts/includes/user_panel.html
+++ b/theme/templates/accounts/includes/user_panel.html
@@ -1,24 +1,15 @@
 {% load i18n mezzanine_tags accounts_tags %}
+<div class="pull-right">
+	{% if not request.user.is_authenticated %}
+		<a class="button dark" href="{% url "signup" %}">Создать магазин</a>
+		<a class="button dark" href="{% url "login" %}">Войти</a>
+	{% else %}
+		{% if not request.user.usershop %}
+			<a class="button gray" href="{% url "shop_create" %}">Создать магазин</a>
+		{% else %}
+			<a class="button gray" href="{% url "profile_settings" %}">{{ request.user|username_or:"email" }}</a>
+		{% endif %}
+			<a class="button dark" href="{% url 'logout' %}?next={{ request.path }}">{% trans "Log out" %}</a>
+		{% endif %}
+</div>
 
-{% if request.user.is_authenticated %}
-    <p>
-    {% trans "Logged in as: " %}
-    {% url "profile" request.user.username as profile_url %}
-    {% if profile_url %}
-        <a href="{{ profile_url }}">{{ request.user|username_or:"email" }}</a>
-    </p>
-        <a href="{% url "profile_update" %}" class="btn btn-default btn-sm btn-account">
-            <span class="glyphicon glyphicon-edit"></span> {% trans "Update profile" %}</a>
-    {% else %}
-        <a href="{% url "profile_update" %}">{{ request.user|username_or:"email" }}</a>
-    </p>
-    {% endif %}
-    <a href="{% url "logout" %}?next={{ request.path }}" class="btn btn-sm btn-danger btn-account">
-        <span class="glyphicon glyphicon-log-out"></span> {% trans "Log out" %}</a>
-{% else %}
-    <a href="{% url "login" %}?next={{ request.path }}" class="btn btn-default btn-sm btn-account">
-        <span class="glyphicon glyphicon-log-in"></span> {% trans "Log in" %}</a>
-    &nbsp;{% trans "or" %}&nbsp;
-    <a href="{% url "signup" %}?next={{ request.path }}" class="btn btn-default btn-sm btn-account">
-        <span class="glyphicon glyphicon-edit"></span> {% trans "Sign up" %}</a>
-{% endif %}
