--- a/theme/templates/shop/includes/order_details.html
+++ b/theme/templates/shop/includes/order_details.html
@@ -44,9 +44,9 @@
     {% for item in order.items.all %}
     <tr>
         <td>{{ item.description }}</td>
-        <td align="right" valign="top">{{ item.unit_price|currency }}</td>
+        <td align="right" valign="top">{{ item.unit_price }}</td>
         <td align="right" valign="top">{{ item.quantity }}</td>
-        <td align="right" valign="top">{{ item.total_price|currency }}</td>
+        <td align="right" valign="top">{{ item.total_price }}</td>
     </tr>
     {% endfor %}
     <tr>
