fix button margins safari

--- a/theme/templates/includes/user_panel.html
+++ b/theme/templates/includes/user_panel.html
@@ -15,7 +15,7 @@
 {% endifinstalled %}
 
 {% ifinstalled mezzanine.accounts %}
-<div class="twelve columns margin-top-10">
+<div class="twelve columns margin-top-10 margin-bottom-5">
 	{% include "accounts/includes/user_panel.html" %}
 </div>
 {% endifinstalled %}
