--- a/theme/templates/includes/form_fields.html
+++ b/theme/templates/includes/form_fields.html
@@ -10,8 +10,18 @@
 {% else %}
 <p class="form-row form-row-wide input_{{ field.id_for_label }} {{ field.field.type }}
     {% if field.errors %} has-error{% endif %}">
-    {% if field.label %}<label class="control-label" for="{{ field.auto_id }}">{{ field.label }}</label>{% endif %}
+    {% if field.field.is_checkbox %}
+        <div class="express">
+                <label class="control control--checkbox">
+                {{ field }}
+                {{ field.label }}
+                <div class="control__indicator"></div>
+                </label>
+            </div>
+    {% else %}
+        {% if field.label %}<label class="control-label" for="{{ field.auto_id }}">{{ field.label }}</label>{% endif %}
     {{ field }}
+    {% endif %}
     {% if field.errors %}
     <p class="help-block">
         {% for e in field.errors %}
