--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -148,6 +148,7 @@
 
 
 
+
 /*.input_id_phone,
 .input_id_city,
 .input_id_image,
@@ -184,6 +185,7 @@ h5 {
 .active-link {
     color: #3acf87!important;
 }
+
 
 
 
@@ -266,6 +268,7 @@ p,
 .footer-links>li {
     padding-top: 6px;
 }
+
 
 
 
@@ -486,6 +489,7 @@ ul.top-bar-menu li:hover i {
 
 
 
+
 /*.share-buttons ul a,
 .tags a,
 .tabs-nav li a,
@@ -627,6 +631,7 @@ a.menu-trigger i {
 
 
 
+
 /*.content-box.color-effect-1:hover h3,
 .content-box.color-effect-2:hover h3,
 .content-box.color-effect-3:hover h3,
@@ -706,6 +711,7 @@ a.menu-trigger i {
     background-color: #f5f5f5!important;
     color: #888!important;
 }
+
 
 
 
@@ -817,6 +823,7 @@ a.menu-trigger i {
 
 
 
+
 /* style 1 */
 
 .inputfile-1+label {
@@ -861,6 +868,7 @@ a.menu-trigger i {
 
 
 
+
 /* style 4 */
 
 .inputfile-4+label {
@@ -872,6 +880,7 @@ a.menu-trigger i {
 .inputfile-4+label span {
     margin-left: 15px;
 }
+
 
 
 
@@ -913,6 +922,7 @@ a.menu-trigger i {
     height: 100%;
     fill: #f1e5e6;
 }
+
 
 
 
@@ -1149,7 +1159,9 @@ input.error {
 
 textarea,
 input[type="text"],
-input[type="submit"] {
+input[type="submit"],
+input[type="password"],
+[type="email"] {
     -webkit-appearance: none;
     border-radius: 0;
     -moz-border-radius: 0;
