--- a/theme/templates/pages/category.html
+++ b/theme/templates/pages/category.html
@@ -174,7 +174,7 @@
 				<a href="{{ product.get_absolute_url }}">
 					<section>
 						<h5>{{ product.title|title|truncatechars:34 }}</h5>
-						<a href="{% url 'shop_view' product.user|get_shop_name %}" class="shopname">{{ product.user|get_shop_name }}</a>
+						<a href="{% url 'shop_view' product.user|get_shop_slug %}" class="shopname">{{ product.user|get_shop_name }}</a>
 						<!--<span class="product-category">
 						</span>-->
 						{% if product.on_custom_sale %}
